mvp features listed

--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,10 @@
-<!doctype html>
 <title>Capstone Project</title>
 <link rel="stylesheet" href="index.css">
 <body>
   <header>Header</header>
   <div id="main">
-    Friend suggested series
-    <button class="myButton" id="recButton" label="click for series recommended by a friend">A friend's suggestion</button>
+    <div id="suggestion"></div>Friend suggested series
+    <button class="button1" id="recButton" label="click for series recommended by a friend">A friend's suggestion</button></div>div>
 
     <form>
       <input type='text' id='seriesTitle' placeholder="Series Name"/>
